--- a/CinemaTV/LocalizedStrings/en.lproj/Localizable.strings
+++ b/CinemaTV/LocalizedStrings/en.lproj/Localizable.strings
@@ -1,10 +1,14 @@
-//HomeView
+//TrailerView
 "trailer" = "Trailer";
+
+//HomeView
 "soon" = "Soon";
-"onCine" = "Now on Cinemas";
+"nowPlaying" = "Now on Cinemas";
 "popular" = "Popular Movies";
 "rated" = "Highly Rated";
 "movies" = "Movies";
 "seeAll" = "See All";
 "discover" = "Discover";
 
+//CinemaTVProgressView
+"loading" = "loading";
