--- a/CinemaTV/LocalizedStrings/pt-BR.lproj/Localizable.strings
+++ b/CinemaTV/LocalizedStrings/pt-BR.lproj/Localizable.strings
@@ -1,9 +1,14 @@
-//HomeView
+//TrailerView
 "trailer" = "Trailer";
+
+//HomeView
 "soon" = "Em breve";
-"onCine" = "Agora nos cinemas";
+"nowPlaying" = "Agora nos cinemas";
 "popular" = "Filmes Populares";
 "rated" = "Melhor avaliados";
 "movies" = "Filmes";
 "seeAll" = "Ver Todos";
 "discover" = "Descubra";
+
+//CinemaTVProgressView
+"loading" = "carregando";
