--- a/CinemaTV/LocalizedStrings/en.lproj/Localizable.strings
+++ b/CinemaTV/LocalizedStrings/en.lproj/Localizable.strings
@@ -1,7 +1,7 @@
-//TrailerView
+// MARK: - TrailerView
 "trailer" = "Trailer";
 
-//HomeView
+// MARK: - HomeView
 "soon" = "Soon";
 "nowPlaying" = "Now on Cinemas";
 "popular" = "Popular Movies";
@@ -9,6 +9,10 @@
 "movies" = "Movies";
 "seeAll" = "See All";
 "discover" = "Discover";
+"tvShows" = "TV Shows";
 
-//CinemaTVProgressView
+// MARK: - TVShowsHome
+"onTheAir" = "On The Air";
+
+// MARK: - CinemaTVProgressView
 "loading" = "loading";
