Add recommendations in Movies and TVShows tabs ang fix some requests

--- a/CinemaTV/LocalizedStrings/pt-BR.lproj/Localizable.strings
+++ b/CinemaTV/LocalizedStrings/pt-BR.lproj/Localizable.strings
@@ -14,5 +14,8 @@
 // MARK: - TVShowsHome
 "onTheAir" = "No ar";
 
-// MARK: -CinemaTVProgressView
+// MARK: - CinemaTVProgressView
 "loading" = "carregando";
+
+// MARK: - Details
+"recommendations" = "Recomendações";
