--- a/CinemaTV/LocalizedStrings/en.lproj/Localizable.strings
+++ b/CinemaTV/LocalizedStrings/en.lproj/Localizable.strings
@@ -18,4 +18,6 @@
 "loading" = "loading";
 
 // MARK: - Details
+"releaseDate" = "Release Date: ";
+"average" = "Average: ";
 "recommendations" = "Recommendations";
