--- a/CinemaTV/LocalizedStrings/pt-BR.lproj/Localizable.strings
+++ b/CinemaTV/LocalizedStrings/pt-BR.lproj/Localizable.strings
@@ -18,4 +18,6 @@
 "loading" = "carregando";
 
 // MARK: - Details
+"releaseDate" = "Data de lançamento: ";
+"average" = "Média: ";
 "recommendations" = "Recomendações";
