--- a/CinemaTV/LocalizedStrings/en.lproj/Localizable.strings
+++ b/CinemaTV/LocalizedStrings/en.lproj/Localizable.strings
@@ -23,3 +23,5 @@
 "average" = "Average: ";
 "recommendations" = "Recommendations";
 "similars" = "Similars";
+"watchButton" = "To Watch";
+"watchedButton" = "Watched";
