--- a/CinemaTV/LocalizedStrings/pt-BR.lproj/Localizable.strings
+++ b/CinemaTV/LocalizedStrings/pt-BR.lproj/Localizable.strings
@@ -23,3 +23,5 @@
 "average" = "Média: ";
 "recommendations" = "Recomendações";
 "similars" = "Similares";
+"watchButton" = "Assistir";
+"watchedButton" = "Assistido";
