--- a/CinemaTV/LocalizedStrings/pt-BR.lproj/Localizable.strings
+++ b/CinemaTV/LocalizedStrings/pt-BR.lproj/Localizable.strings
@@ -25,3 +25,7 @@
 "similars" = "Similares";
 "watchButton" = "Assistir";
 "watchedButton" = "Assistido";
+
+//MARK: - Credits
+"creditsName" = "The Move Data Base (TMDB)";
+"creditsParagraph" = " Os dados de filmes e séries disponibilizados dento do CinemaTV, como posters, descrição, notas, elenco e suas fotos são fornecidas pela API do TMDB.\n\n Apesar do CinemaTV utilizar a API do TMBD, ele não é endossado/certificado pelo mesmo.";
