--- a/CinemaTV/LocalizedStrings/pt-BR.lproj/Localizable.strings
+++ b/CinemaTV/LocalizedStrings/pt-BR.lproj/Localizable.strings
@@ -26,6 +26,7 @@
 "similars" = "Similares";
 "watchButton" = "Assistir";
 "watchedButton" = "Assistido";
+"addFavorites" = "Adicionar";
 
 //MARK: - Credits
 "creditsName" = "The Move Data Base (TMDB)";
