Fix add button string

--- a/CinemaTV/LocalizedStrings/Localizable.xcstrings
+++ b/CinemaTV/LocalizedStrings/Localizable.xcstrings
@@ -4,6 +4,23 @@
     "_" : {
 
     },
+    "addFavorites" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Add"
+          }
+        },
+        "pt-BR" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Adicionar"
+          }
+        }
+      }
+    },
     "average" : {
       "extractionState" : "manual",
       "localizations" : {
